--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,36 @@
 main {
   display: flex;
+  justify-content: center;
+  font-size: 2rem;
+}
+section,
+aside {
+  border: 2px solid red;
+  width: 40%;
+}
+
+header {
+  text-align: center;
+}
+
+.contact input,
+.address input {
+  border: 1px solid #828282;
+  padding: 20px 5px 20px 35px;
+  color: #828282;
+  font-size: 14px;
+  border-radius: 5px;
+  width: 80%;
+}
+
+.campo {
+  position: relative;
+}
+i {
+  position: absolute;
+  color: #828282;
+  font-size: 16px;
+  top: 39%;
+  // transform: translateY(-50%);
+  left: 2%;
 }
