--- a/style.css
+++ b/style.css
@@ -160,6 +160,10 @@ label {
   border: none;
 }
 
+#see {
+  margin-right: 1rem;
+}
+
 @media screen and (max-width: 750px) {
   main {
     display: flex;
@@ -172,6 +176,4 @@ main aside,
 main form {
     width: 22rem;
   }
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
