--- a/style.scss
+++ b/style.scss
@@ -167,6 +167,10 @@ label {
   border: none;
 }
 
+#see {
+  margin-right: 1rem;
+}
+
 @media screen and (max-width: 750px) {
   main {
     display: flex;
